exports[`CategoryList should render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {
          "backgroundColor": "#003035",
        },
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Array [
            Object {
              "fontFamily": "Brandon Text_medium",
              "fontSize": 20,
              "fontWeight": "400",
            },
            Object {
              "color": "#fff",
            },
          ],
        ]
      }>
      Relationship Stages
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }>
    <TouchableNativeFeedback
      onPress={[Function]}
      uid="category:1">
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#c4cd39",
            },
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_medium",
                  "fontSize": 20,
                  "fontWeight": "400",
                },
                Object {
                  "color": "#fff",
                },
              ],
            ]
          }>
          Connect
        </Text>
      </View>
    </TouchableNativeFeedback>
    <TouchableNativeFeedback
      onPress={[Function]}
      uid="category:2">
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#97c13c",
            },
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_medium",
                  "fontSize": 20,
                  "fontWeight": "400",
                },
                Object {
                  "color": "#fff",
                },
              ],
            ]
          }>
          Level
        </Text>
      </View>
    </TouchableNativeFeedback>
  </View>
</View>
`;

exports[`CategoryList should render with a back button if onBackPress is given 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {
          "backgroundColor": "#003035",
        },
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Array [
            Object {
              "fontFamily": "Brandon Text_medium",
              "fontSize": 20,
              "fontWeight": "400",
            },
            Object {
              "color": "#fff",
            },
          ],
        ]
      }>
      Relationship Stages
    </Text>
    <TouchableNativeFeedback
      onPress={[Function]}>
      <View
        style={
          Array [
            Object {
              "position": "absolute",
              "top": 24,
            },
            Object {},
          ]
        }>
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {},
            ]
          } />
      </View>
    </TouchableNativeFeedback>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }>
    <TouchableNativeFeedback
      onPress={[Function]}
      uid="category:1">
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#c4cd39",
            },
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_medium",
                  "fontSize": 20,
                  "fontWeight": "400",
                },
                Object {
                  "color": "#fff",
                },
              ],
            ]
          }>
          Connect
        </Text>
      </View>
    </TouchableNativeFeedback>
    <TouchableNativeFeedback
      onPress={[Function]}
      uid="category:2">
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#97c13c",
            },
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
              },
              Object {
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_medium",
                  "fontSize": 20,
                  "fontWeight": "400",
                },
                Object {
                  "color": "#fff",
                },
              ],
            ]
          }>
          Level
        </Text>
      </View>
    </TouchableNativeFeedback>
  </View>
</View>
`;
